tests/snapshots/js_define_message__define_message_explicit_context_overrides_directive.snap
---
source: tests/js_define_message.rs
---
import { defineMessage } from '@lingui/core/macro';
/* lingui-set context="directive ctx" comment="directive cmt" */
const msg = defineMessage({ message: "Hello", context: "explicit ctx" })

↓ ↓ ↓ ↓ ↓ ↓

/* lingui-set context="directive ctx" comment="directive cmt" */ const msg = /*i18n*/ {
    id: "Mxe6B4",
    message: "Hello",
    context: "explicit ctx",
    comment: "directive cmt"
};
