tests/snapshots/js_define_message__define_message_tagged_template_with_directive.snap
---
source: tests/js_define_message.rs
---
import { defineMessage } from '@lingui/core/macro';
/* lingui-set context="my context" comment="note" */
const msg = defineMessage`Hello`

↓ ↓ ↓ ↓ ↓ ↓

/* lingui-set context="my context" comment="note" */ const msg = /*i18n*/ {
    id: "WMU_Op",
    message: "Hello",
    comment: "note",
    context: "my context"
};
