tests/snapshots/js_define_message__message_should_keep_message_and_context.snap
---
source: tests/js_define_message.rs
info:
  descriptor_fields: message
---
import { defineMessage } from '@lingui/macro'
const message1 = defineMessage`Message`;
const message2 = defineMessage({
    message: `Hello ${name}`,
    id: 'msgId',
    comment: 'description for translators',
    context: 'My Context',
})

↓ ↓ ↓ ↓ ↓ ↓

const message1 = /*i18n*/ {
    id: "xDAtGP",
    message: "Message"
};
const message2 = /*i18n*/ {
    id: "msgId",
    message: "Hello {name}",
    values: {
        name: name
    },
    context: "My Context"
};
